# knncpp

./: .gitignore  CMakeLists.txt  LICENCE  README.md  preprocess.py
data/: Social_Network_Ads_knn_data.csv  student_clustering.csv
include/: data_utils.hpp  evaluate.hpp  kdtree.hpp  kdtree_knn.hpp  kmeans.hpp  knn.hpp  vector.hpp
src/: data_utils.hpp  evaluate.hpp  kdtree_knn_main.cpp  kmeans.hpp  knn.hpp  knn_cli_main.cpp  knn_main.cpp  knn_tester_1.cpp  knn_tester_2.cpp  main.cpp  tester.cpp  vector.hpp
